# RFlect

./: .bumpversion.cfg  .gitignore  404.html  AI_STATUS.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES.txt  RFlect.spec  RFlect_v1.0.0.py  RFlect_v1.0.1.py  RFlect_v1.0.2.py  RFlect_v1.0.3.py  index.html  installer.iss  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_rflect.py  settings.json  sitemap.xml
.github/workflows/: docs.yml  release.yml  tests.yml
ai/chat/: index.html
ai/overview/: index.html
ai/providers/: index.html
ai/reports/: index.html
ai/status/: index.html
contributing/: index.html
docs/: index.md  requirements.txt
docs/ai/: chat.md  overview.md  providers.md  reports.md  status.md
docs/getting-started/: concepts.md  install.md  quickstart.md
docs/hardware/: chambers.md  file-formats.md  instruments.md
docs/mcp/: installation.md  overview.md  recipes.md  tools-reference.md  troubleshooting.md
docs/reference/: api.md  cli.md  glossary.md
docs/user-guide/: active-trp.md  advanced-rf.md  cal-drift.md  group-delay.md  maritime-horizon.md  passive-gain.md  polarization.md  s11-impedance.md  uwb-sff.md
getting-started/concepts/: index.html
getting-started/install/: index.html
getting-started/quickstart/: index.html
hardware/chambers/: index.html
hardware/file-formats/: index.html
hardware/instruments/: index.html
mcp/installation/: index.html
mcp/overview/: index.html
mcp/recipes/: index.html
mcp/tools-reference/: index.html
mcp/troubleshooting/: index.html
plot_antenna/: __init__.py  ai_analysis.py  api_keys.py  cal_drift.py  calculations.py  config.py  config_template.py  file_utils.py  groupdelay.py  gui.py  llm_provider.py  main.py  plot_group_delay_cst.py  plotting.py  report.py  save.py  uwb_analysis.py  uwb_plotting.py
plot_antenna/gui/: __init__.py  ai_chat_mixin.py  base_protocol.py  cal_drift_dialog.py  callbacks_mixin.py  dialogs_mixin.py  main_window.py  tools_mixin.py  tooltip.py  utils.py
reference/api/: index.html
reference/cli/: index.html
rflect-mcp/: README.md  requirements.txt  server.py
search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_active_calibration.py  test_advanced_analysis.py  test_advanced_analysis_integration.py  test_ai_analysis.py  test_api_keys.py  test_cal_drift.py  test_calculations.py  test_file_utils.py  test_llm_provider.py  test_maritime_plots.py  test_mcp_integration.py  test_mcp_process_folder.py  test_mcp_report.py  test_mcp_tools.py  test_real_data_integration.py  test_uwb_analysis.py  test_uwb_real_data.py
(+26 files in other folders)
